# gh-actions-docs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
cicd/: index.html
contributing/: index.html
gh_actions_docs/docs/: api.md  cicd.md  contributing.md  index.md  installation.md  usage.md
gh_actions_docs/src/: main.py
installation/: index.html
search/: search_index.json
tests/: test_main.py
usage/: index.html
